exports[`no-useless-else > invalid(1): function qux() {\n\tif (condition) {\n\t\tif (true) {\n\t\t\treturn;\n\t\t}\n\t} else {\n\t\tbar();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (condition) {
  3 | 		if (true) {
  4 | 			return;
  5 | 		}
  6 | 	} else {
  7 | 		bar();
  8 | 	}
  9 | }

`;

exports[`no-useless-else > invalid(1): function qux() {\n\tif (condition) {\n\t\tif (true) {\n\t\t\treturn;\n\t\t}\n\t} else {\n\t\tbar();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (condition) {
  3 | 		if (true) {
  4 | 			return;
  5 | 		}
> 6 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  7 | 		bar();
  8 | 	}
  9 | }

Output:
  1 | function qux() {
  2 | 	if (condition) {
  3 | 		if (true) {
  4 | 			return;
  5 | 		}
  6 | 	}
  7 | 	bar();
  8 | }

`;

exports[`no-useless-else > invalid(10): function qux() {\n\tif (condition) {\n\t\tif ((Object.freeze as typeof Object.freeze)({})) {\n\t\t\treturn;\n\t\t}\n\t} else {\n\t\tbar();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (condition) {
  3 | 		if ((Object.freeze as typeof Object.freeze)({})) {
  4 | 			return;
  5 | 		}
  6 | 	} else {
  7 | 		bar();
  8 | 	}
  9 | }

`;

exports[`no-useless-else > invalid(10): function qux() {\n\tif (condition) {\n\t\tif ((Object.freeze as typeof Object.freeze)({})) {\n\t\t\treturn;\n\t\t}\n\t} else {\n\t\tbar();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (condition) {
  3 | 		if ((Object.freeze as typeof Object.freeze)({})) {
  4 | 			return;
  5 | 		}
> 6 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  7 | 		bar();
  8 | 	}
  9 | }

Output:
  1 | function qux() {
  2 | 	if (condition) {
  3 | 		if ((Object.freeze as typeof Object.freeze)({})) {
  4 | 			return;
  5 | 		}
  6 | 	}
  7 | 	bar();
  8 | }

`;

exports[`no-useless-else > invalid(11): function qux() {\n\tif (condition) {\n\t\tif (Object.freeze!({})) {\n\t\t\treturn;\n\t\t}\n\t} else {\n\t\tbar();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (condition) {
  3 | 		if (Object.freeze!({})) {
  4 | 			return;
  5 | 		}
  6 | 	} else {
  7 | 		bar();
  8 | 	}
  9 | }

`;

exports[`no-useless-else > invalid(11): function qux() {\n\tif (condition) {\n\t\tif (Object.freeze!({})) {\n\t\t\treturn;\n\t\t}\n\t} else {\n\t\tbar();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (condition) {
  3 | 		if (Object.freeze!({})) {
  4 | 			return;
  5 | 		}
> 6 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  7 | 		bar();
  8 | 	}
  9 | }

Output:
  1 | function qux() {
  2 | 	if (condition) {
  3 | 		if (Object.freeze!({})) {
  4 | 			return;
  5 | 		}
  6 | 	}
  7 | 	bar();
  8 | }

`;

exports[`no-useless-else > invalid(12): function qux() {\n\tif (condition) {\n\t\tif ((Object.freeze satisfies typeof Object.freeze)({})) {\n\t\t\treturn;\n\t\t}\n\t} else {\n\t\tbar();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (condition) {
  3 | 		if ((Object.freeze satisfies typeof Object.freeze)({})) {
  4 | 			return;
  5 | 		}
  6 | 	} else {
  7 | 		bar();
  8 | 	}
  9 | }

`;

exports[`no-useless-else > invalid(12): function qux() {\n\tif (condition) {\n\t\tif ((Object.freeze satisfies typeof Object.freeze)({})) {\n\t\t\treturn;\n\t\t}\n\t} else {\n\t\tbar();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (condition) {
  3 | 		if ((Object.freeze satisfies typeof Object.freeze)({})) {
  4 | 			return;
  5 | 		}
> 6 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  7 | 		bar();
  8 | 	}
  9 | }

Output:
  1 | function qux() {
  2 | 	if (condition) {
  3 | 		if ((Object.freeze satisfies typeof Object.freeze)({})) {
  4 | 			return;
  5 | 		}
  6 | 	}
  7 | 	bar();
  8 | }

`;

exports[`no-useless-else > invalid(13): function qux() {\n\tif (condition) {\n\t\tif ((<typeof Object.freeze>Object.freeze)({})) {\n\t\t\treturn;\n\t\t}\n\t} else {\n\t\tbar();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (condition) {
  3 | 		if ((<typeof Object.freeze>Object.freeze)({})) {
  4 | 			return;
  5 | 		}
  6 | 	} else {
  7 | 		bar();
  8 | 	}
  9 | }

`;

exports[`no-useless-else > invalid(13): function qux() {\n\tif (condition) {\n\t\tif ((<typeof Object.freeze>Object.freeze)({})) {\n\t\t\treturn;\n\t\t}\n\t} else {\n\t\tbar();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (condition) {
  3 | 		if ((<typeof Object.freeze>Object.freeze)({})) {
  4 | 			return;
  5 | 		}
> 6 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  7 | 		bar();
  8 | 	}
  9 | }

Output:
  1 | function qux() {
  2 | 	if (condition) {
  3 | 		if ((<typeof Object.freeze>Object.freeze)({})) {
  4 | 			return;
  5 | 		}
  6 | 	}
  7 | 	bar();
  8 | }

`;

exports[`no-useless-else > invalid(14): function qux() {\n\tif (condition) {\n\t\tif ((Object as typeof Object).freeze({})) {\n\t\t\treturn;\n\t\t}\n\t} else {\n\t\tbar();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (condition) {
  3 | 		if ((Object as typeof Object).freeze({})) {
  4 | 			return;
  5 | 		}
  6 | 	} else {
  7 | 		bar();
  8 | 	}
  9 | }

`;

exports[`no-useless-else > invalid(14): function qux() {\n\tif (condition) {\n\t\tif ((Object as typeof Object).freeze({})) {\n\t\t\treturn;\n\t\t}\n\t} else {\n\t\tbar();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (condition) {
  3 | 		if ((Object as typeof Object).freeze({})) {
  4 | 			return;
  5 | 		}
> 6 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  7 | 		bar();
  8 | 	}
  9 | }

Output:
  1 | function qux() {
  2 | 	if (condition) {
  3 | 		if ((Object as typeof Object).freeze({})) {
  4 | 			return;
  5 | 		}
  6 | 	}
  7 | 	bar();
  8 | }

`;

exports[`no-useless-else > invalid(2): function qux() {\n\tif (condition) {\n\t\tif (false) {\n\t\t\tbar();\n\t\t} else {\n\t\t\treturn;\n\t\t}\n\t} else {\n\t\tbar();\n\t}\n} 1`] = `

   1 | function qux() {
   2 | 	if (condition) {
   3 | 		if (false) {
   4 | 			bar();
   5 | 		} else {
   6 | 			return;
   7 | 		}
   8 | 	} else {
   9 | 		bar();
  10 | 	}
  11 | }

`;

exports[`no-useless-else > invalid(2): function qux() {\n\tif (condition) {\n\t\tif (false) {\n\t\t\tbar();\n\t\t} else {\n\t\t\treturn;\n\t\t}\n\t} else {\n\t\tbar();\n\t}\n} 2`] = `

Message:
   1 | function qux() {
   2 | 	if (condition) {
   3 | 		if (false) {
   4 | 			bar();
   5 | 		} else {
   6 | 			return;
   7 | 		}
>  8 | 	} else {
     | 	  ^^^^ Unexpected \`else\` after a statement that exits.
   9 | 		bar();
  10 | 	}
  11 | }

Output:
   1 | function qux() {
   2 | 	if (condition) {
   3 | 		if (false) {
   4 | 			bar();
   5 | 		} else {
   6 | 			return;
   7 | 		}
   8 | 	}
   9 | 	bar();
  10 | }

`;

exports[`no-useless-else > invalid(3): function qux() {\n\tif (true) {\n\t\tprocess.exit();\n\t} else {\n\t\tbar();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (true) {
  3 | 		process.exit();
  4 | 	} else {
  5 | 		bar();
  6 | 	}
  7 | }

`;

exports[`no-useless-else > invalid(3): function qux() {\n\tif (true) {\n\t\tprocess.exit();\n\t} else {\n\t\tbar();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (true) {
  3 | 		process.exit();
> 4 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		bar();
  6 | 	}
  7 | }

Output:
  1 | function qux() {
  2 | 	if (true) {
  3 | 		process.exit();
  4 | 	}
  5 | 	bar();
  6 | }

`;

exports[`no-useless-else > invalid(4): function qux() {\n\tif (!false) {\n\t\tprocess.exit();\n\t} else {\n\t\tbar();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (!false) {
  3 | 		process.exit();
  4 | 	} else {
  5 | 		bar();
  6 | 	}
  7 | }

`;

exports[`no-useless-else > invalid(4): function qux() {\n\tif (!false) {\n\t\tprocess.exit();\n\t} else {\n\t\tbar();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (!false) {
  3 | 		process.exit();
> 4 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		bar();
  6 | 	}
  7 | }

Output:
  1 | function qux() {
  2 | 	if (!false) {
  3 | 		process.exit();
  4 | 	}
  5 | 	bar();
  6 | }

`;

exports[`no-useless-else > invalid(5): function qux() {\n\tif (true && true) {\n\t\tprocess.exit();\n\t} else {\n\t\tbar();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (true && true) {
  3 | 		process.exit();
  4 | 	} else {
  5 | 		bar();
  6 | 	}
  7 | }

`;

exports[`no-useless-else > invalid(5): function qux() {\n\tif (true && true) {\n\t\tprocess.exit();\n\t} else {\n\t\tbar();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (true && true) {
  3 | 		process.exit();
> 4 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		bar();
  6 | 	}
  7 | }

Output:
  1 | function qux() {
  2 | 	if (true && true) {
  3 | 		process.exit();
  4 | 	}
  5 | 	bar();
  6 | }

`;

exports[`no-useless-else > invalid(6): function qux() {\n\tif (condition) {\n\t\tif (Object.freeze({})) {\n\t\t\treturn;\n\t\t}\n\t} else {\n\t\tbar();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (condition) {
  3 | 		if (Object.freeze({})) {
  4 | 			return;
  5 | 		}
  6 | 	} else {
  7 | 		bar();
  8 | 	}
  9 | }

`;

exports[`no-useless-else > invalid(6): function qux() {\n\tif (condition) {\n\t\tif (Object.freeze({})) {\n\t\t\treturn;\n\t\t}\n\t} else {\n\t\tbar();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (condition) {
  3 | 		if (Object.freeze({})) {
  4 | 			return;
  5 | 		}
> 6 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  7 | 		bar();
  8 | 	}
  9 | }

Output:
  1 | function qux() {
  2 | 	if (condition) {
  3 | 		if (Object.freeze({})) {
  4 | 			return;
  5 | 		}
  6 | 	}
  7 | 	bar();
  8 | }

`;

exports[`no-useless-else > invalid(7): function qux() {\n\tif (condition) {\n\t\tif (Object.seal({})) {\n\t\t\treturn;\n\t\t}\n\t} else {\n\t\tbar();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (condition) {
  3 | 		if (Object.seal({})) {
  4 | 			return;
  5 | 		}
  6 | 	} else {
  7 | 		bar();
  8 | 	}
  9 | }

`;

exports[`no-useless-else > invalid(7): function qux() {\n\tif (condition) {\n\t\tif (Object.seal({})) {\n\t\t\treturn;\n\t\t}\n\t} else {\n\t\tbar();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (condition) {
  3 | 		if (Object.seal({})) {
  4 | 			return;
  5 | 		}
> 6 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  7 | 		bar();
  8 | 	}
  9 | }

Output:
  1 | function qux() {
  2 | 	if (condition) {
  3 | 		if (Object.seal({})) {
  4 | 			return;
  5 | 		}
  6 | 	}
  7 | 	bar();
  8 | }

`;

exports[`no-useless-else > invalid(8): function qux() {\n\tif (condition) {\n\t\tif (Object.preventExtensions({})) {\n\t\t\treturn;\n\t\t}\n\t} else {\n\t\tbar();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (condition) {
  3 | 		if (Object.preventExtensions({})) {
  4 | 			return;
  5 | 		}
  6 | 	} else {
  7 | 		bar();
  8 | 	}
  9 | }

`;

exports[`no-useless-else > invalid(8): function qux() {\n\tif (condition) {\n\t\tif (Object.preventExtensions({})) {\n\t\t\treturn;\n\t\t}\n\t} else {\n\t\tbar();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (condition) {
  3 | 		if (Object.preventExtensions({})) {
  4 | 			return;
  5 | 		}
> 6 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  7 | 		bar();
  8 | 	}
  9 | }

Output:
  1 | function qux() {
  2 | 	if (condition) {
  3 | 		if (Object.preventExtensions({})) {
  4 | 			return;
  5 | 		}
  6 | 	}
  7 | 	bar();
  8 | }

`;

exports[`no-useless-else > invalid(9): function qux() {\n\tif (condition) {\n\t\tif ((Object.freeze({}) as object)) {\n\t\t\treturn;\n\t\t}\n\t} else {\n\t\tbar();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (condition) {
  3 | 		if ((Object.freeze({}) as object)) {
  4 | 			return;
  5 | 		}
  6 | 	} else {
  7 | 		bar();
  8 | 	}
  9 | }

`;

exports[`no-useless-else > invalid(9): function qux() {\n\tif (condition) {\n\t\tif ((Object.freeze({}) as object)) {\n\t\t\treturn;\n\t\t}\n\t} else {\n\t\tbar();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (condition) {
  3 | 		if ((Object.freeze({}) as object)) {
  4 | 			return;
  5 | 		}
> 6 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  7 | 		bar();
  8 | 	}
  9 | }

Output:
  1 | function qux() {
  2 | 	if (condition) {
  3 | 		if ((Object.freeze({}) as object)) {
  4 | 			return;
  5 | 		}
  6 | 	}
  7 | 	bar();
  8 | }

`;
